--- a/manifest.plist
+++ b/manifest.plist
@@ -12,7 +12,7 @@
      <key>kind</key>
      <string>software-package</string>
      <key>url</key>
-     <string>https://example.com/app.ipa</string>
+     <string>https://myctechteam.github.io/myctechteam/app/app.ipa</string>
     </dict>
    </array>
    <key>metadata</key>
